# openclaw-helm

./: Chart.yaml  README.md  index.yaml  values.yaml
.github/workflows/: check-upstream.yml  gatekeeper-image.yml  release.yml
charts/openclaw-helm/: Chart.yaml  values.yaml
charts/openclaw-helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml  secret.yaml  service.yaml
docs/: auto_upgrade.md  backup.md  backup_strategy.md  gatekeeper.md  persistent-tools.md  zeabur_options.md
gatekeeper/: Cargo.toml  Dockerfile
gatekeeper/src/: main.rs
scripts/: openclaw-autoupgrade.sh  openclaw-backup.sh
templates/: NOTES.txt  deployment.yaml
templates/tests/: test-connection.yaml
